@startuml

left to right direction

class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnNextDayClick {
}
class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnPreviousDayClick {
}
class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnToggleMealClick {
+ <<Create>> OnToggleMealClick(Meal)
}

class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnDeleteTrackedFoodClick {
+ <<Create>> OnDeleteTrackedFoodClick(TrackedFood)
}

class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnAddFoodClick {
+ <<Create>> OnAddFoodClick(Meal)
}

class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent {
}
class com.andreeailie.tracker_presentation.tracker_overview.Meal {
+ <<Create>> Meal(UiText,Int,MealType,Int,Int,Int,Int,Boolean)
}

class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewViewModel {
+  state
-  _uiEvent
+  uiEvent
- Job? getFoodsForDateJob
+ <<Create>> TrackerOverviewViewModel(Preferences,TrackerUseCases)
+ void onEvent(TrackerOverviewEvent)
- void refreshFoods()
}


class com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewState {
+ <<Create>> TrackerOverviewState(Int,Int,Int,Int,Int,Int,Int,Int,LocalDate,List<TrackedFood>,List<Meal>)
}



com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent +.. com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnNextDayClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnNextDayClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent +.. com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnPreviousDayClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnPreviousDayClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent +.. com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnToggleMealClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnToggleMealClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent +.. com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnDeleteTrackedFoodClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnDeleteTrackedFoodClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent +.. com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnAddFoodClick
com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewEvent$OnAddFoodClick
androidx.lifecycle.ViewModel <|-- com.andreeailie.tracker_presentation.tracker_overview.TrackerOverviewViewModel
@enduml